Minimal build broken after JDK-8233494

XMLWordPrintable

    • b22
    • Verified

        Minimal build is broken after JDK-8233494.

        $ make hotspot CONF=x86_64-minimal-rel
        Building target 'hotspot' in configuration 'linux-x86_64-minimal-release'
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp: In static member function 'static void* os::realloc(void*, size_t, MEMFLAGS, const NativeCallStack&)':
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:759:58: error: no matching function for call to 'MemTracker::record_free(void*&, NMT_TrackingLevel&)'
           void* membase = MemTracker::record_free(memblock, level);
                                                                  ^
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:759:58: note: candidate is:
        In file included from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:60:0:
        /home/aoqi/jdk/src/hotspot/share/services/memTracker.hpp:62:23: note: static void* MemTracker::record_free(void*)
           static inline void* record_free(void* memblock) { return memblock; }
                               ^
        /home/aoqi/jdk/src/hotspot/share/services/memTracker.hpp:62:23: note: candidate expects 1 argument, 2 provided
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp: In static member function 'static void os::free(void*)':
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:809:81: error: no matching function for call to 'MemTracker::record_free(void*&, NMT_TrackingLevel)'
           void* membase = MemTracker::record_free(memblock, MemTracker::tracking_level());
                                                                                         ^
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:809:81: note: candidate is:
        In file included from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:60:0:
        /home/aoqi/jdk/src/hotspot/share/services/memTracker.hpp:62:23: note: static void* MemTracker::record_free(void*)
           static inline void* record_free(void* memblock) { return memblock; }
                               ^
        /home/aoqi/jdk/src/hotspot/share/services/memTracker.hpp:62:23: note: candidate expects 1 argument, 2 provided
        At global scope:
        cc1plus: warning: unrecognized command line option "-Wno-cast-function-type" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
        gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/os.o] Error 1
        gmake[3]: *** Waiting for unfinished jobs....
        gmake[2]: *** [hotspot-minimal-libs] Error 1

              Assignee:
              Qi Ao
              Reporter:
              Qi Ao
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: