8233608: Minimal build broken after JDK-8233494

Reviewed-by: shade